--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The music that you always wanted to hear</title>
+    </head>
+
+    <body>
+        <div> 
+        <h4>This site tells you which music is good and which is trash</h4>
+        </div>
+        <div> 
+            <ul>
+                <li><a href="goodmusic.html">Good Music</a></li>
+                <li><a href="badmusic.html">Bad Music</a></li>
+            </ul>
+        </div>
+
+    </body>
+</html>
