--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head> 
+        <meta charset="UTF-8">
+        <meta name="description" content="My friend circle consists of only people whos iq is above 170">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Kraken">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The music that you always wanted to hear</title>
+        <title>Why you're dumb as fuck</title>
     </head>
 
     <body>
         <div> 
-        <h4>This site tells you which music is good and which is trash</h4>
+        <h4>An explanation of why you're dumb as fuck</h4>
         </div>
         <div> 
-            <ul>
-                <li><a href="goodmusic.html">Good Music</a></li>
-                <li><a href="badmusic.html">Bad Music</a></li>
-            </ul>
+            <p>You're a sheep in this society who thinks 2+2=5, cry about it</p>
         </div>
-
     </body>
 </html>
