--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
     <head> 
         <meta charset="UTF-8">
-        <meta name="description" content="My friend circle consists of only people whos iq is above 170">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Why you're dumb as fuck" />
+        <meta property="og:description" content="Read this to find out why you're still a virgin" />
+        <meta property="og:url" content="devkraken.github.io" />
+        <meta property="og:image" content="https://cdn.discordapp.com/attachments/845613567397986314/869046058142015588/843748463238053898.png" />
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <meta name="author" content="Kraken">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Why you're dumb as fuck</title>
+
+        
     </head>
 
     <body>
         <div> 
-        <h4>An explanation of why you're dumb as fuck</h4>
+        <h4>An explanation to prove why you're dumb as fuck</h4>
         </div>
         <div> 
             <p>You're a sheep in this society who thinks 2+2=5, cry about it</p>
