--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head> 
         <meta charset="UTF-8">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Why you're dumb as fuck" />
-        <meta property="og:description" content="Read this to find out why you're still a virgin" />
+        <meta property="og:title" content="Why scary is such a fucking retard" />
+        <meta property="og:description" content="He has a gigabyte of FNAF futa porn" />
         <meta property="og:url" content="devkraken.github.io" />
         <meta property="og:image" content="https://cdn.discordapp.com/attachments/845613567397986314/869046058142015588/843748463238053898.png" />
         <meta name="keywords" content="HTML, CSS, JavaScript">
