--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head> 
         <meta charset="UTF-8">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Why scary is such a fucking retard" />
-        <meta property="og:description" content="He has a gigabyte of FNAF futa porn" />
+        <meta property="og:title" content="FREE BOOBA" />
+        <meta property="og:description" content="Sexy Mommy Milkers for Free!!!!!" />
         <meta property="og:url" content="devkraken.github.io" />
-        <meta property="og:image" content="https://cdn.discordapp.com/attachments/845613567397986314/869046058142015588/843748463238053898.png" />
+        <meta property="og:image" content="https://media1.giphy.com/media/dvSQHDljJ6NlC/giphy.gif?cid=790b7611b735b30064ab9638d942825698fc1588d9e143d4&rid=giphy.gif&ct=g" />
         <meta name="keywords" content="HTML, CSS, JavaScript">
         <meta name="author" content="Kraken">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,10 +17,10 @@
 
     <body>
         <div> 
-        <h4>An explanation to prove why you're dumb as fuck</h4>
+        <h1>Plinko</h1>
         </div>
         <div> 
-            <p>You're a sheep in this society who thinks 2+2=5, cry about it</p>
+            
         </div>
     </body>
 </html>
